--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,9 +3,18 @@ server {
 
 
 
+location ^~/uploads/ {
+
+root /home/box/web/;
+
+}
+
+location ~* ^.+\.\w+$ {
+
+root /home/box/web/public;
+
+}
 location / {
-
-root /home/maksim/box/web/uploads;
-
+return 404;
 }
 }
