--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -5,13 +5,13 @@ server {
 
 location ^~/uploads/ {
 
-root /home/box/web/;
+root /home/box/django-test-project/;
 
 }
 
 location ~* ^.+\.\w+$ {
 
-root /home/box/web/public;
+root /home/box/django-test-project/public;
 
 }
 location / {
