--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,6 +1,7 @@
 server {
    listen 80 default;
-
+proxy_set_header Host $host;
+proxy_set_header X-Real-IP $remote_addr;
 
 
 location ^~/uploads/ {
@@ -17,4 +18,11 @@ root /home/box/web/public;
 location / {
 return 404;
 }
+location /hello/{
+proxy_pass http://backend; 
+}
+}
+upstream backend {  
+  server  0.0.0.0:8080        weight=2;
+   
 }
